"Updated portfolio theme"

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,25 @@
-<div class="app-container">
-    <app-navigation></app-navigation>
+<div class="home-content">
+    <div class="w-100">
+        <div class="greeting">
+            <span>👋</span>
+            <span class="text-blue">Hello!</span>
+        </div>
+        <p class="fs-3 fw-bold mt-3 mb-4">Your End-to-End Web Development & Product Experts</p>
+        <p class="fs-5">Let's take your website to next level</p>
+    </div>
+    <div class="position-relative">
+        <svg #circleContainer width="500" height="500" viewBox="150 150 500 500" xmlns="http://www.w3.org/2000/svg">
+            <circle cx="400" cy="400" r="200" fill="#7B4AE2" fill-opacity="0.2"/>
+        
+            <circle class="smallCircle" cx="600" cy="400" r="35.81" fill="#090E16"/>
+            <circle class="smallCircle" cx="300" cy="573.2" r="35.81" fill="#090E16"/>
+            <circle class="smallCircle" cx="300" cy="226.8" r="35.81" fill="#090E16"/>
+        </svg>
+        
+        <img src="/assets/home-character.svg" class="position-absolute top-50 start-50 translate-middle">
+        
+    </div>
+    <div class="w-100 d-flex justify-content-end">
+        <button class="btn btn-outline">Hire Us</button>
+    </div>
 </div>
