--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -1,4 +1,9 @@
 .app-container {
-    max-width: 1350px;
+    max-width: 1300px;
     margin: auto;
+    padding: 20px;
+}
+
+.page-container {
+    padding: 20px;
 }
