--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
-<app-home></app-home>
+<div class="app-container">
+    <div class="mb-20 position-sticky top-20">
+        <app-navigation></app-navigation>
+    </div>
+    <router-outlet></router-outlet>
+</div>
+
