--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,16 +1,22 @@
-<div class="navbar d-flex justify-content-between align-items-center">
+<nav class="navbar d-flex justify-content-between align-items-center">
     <div class="d-flex align-items-center gap-2">
         <img class="logo" src="/assets/coding.png" />
         <span class="text-xx-large font-mono-space">FreelancerDevs</span>
     </div>
-    <div>
-        <ul class="d-flex nav align-items-center gap-5">
-            <li>ABOUT</li>
-            <li>PROJECTS</li>
-            <li>CONTACT US</li>
-            <li>
-                <i class="bi bi-list menu"></i>
+    <div class="d-flex align-items-center">
+        <ul class="d-none nav align-items-center gap-5 d-md-flex">
+            <li routerLinkActive="active">
+                <a routerLink="about">ABOUT</a>
+            </li>
+            <li routerLinkActive="active">
+                <a routerLink="projects">PROJECTS</a>
+            </li>
+            <li routerLinkActive="active">
+                <a routerLink="contact">CONTACT US</a>
             </li>
         </ul>
+        <div class="d-md-none">
+            <i class="bi bi-list menu"></i>
+        </div>
     </div>
-</div>
+</nav>
