--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,16 +5,38 @@
             <span class="text-blue">Hello!</span>
         </div>
         <p class="fs-3 fw-bold mt-3 mb-4">Your End-to-End Web Development & Product Experts</p>
-        <p class="fs-5">Let's take your website to next level</p>
+        <p class="fs-5 text-yellow">Let's take your website to next level</p>
     </div>
     <div class="position-relative">
-        <svg #circleContainer width="500" height="500" viewBox="150 150 500 500" xmlns="http://www.w3.org/2000/svg">
+        <svg #circleContainer width="800" height="800" viewBox="0 0 800 800" xmlns="http://www.w3.org/2000/svg">
             <circle cx="400" cy="400" r="200" fill="#7B4AE2" fill-opacity="0.2"/>
-        
-            <circle class="smallCircle" cx="600" cy="400" r="35.81" fill="#090E16"/>
-            <circle class="smallCircle" cx="300" cy="573.2" r="35.81" fill="#090E16"/>
-            <circle class="smallCircle" cx="300" cy="226.8" r="35.81" fill="#090E16"/>
+            
+                <g class="smallCircleGroup" transform="translate(300, 226.8)">
+                    <circle class="smallCircle" r="35.81" fill="#090E16"/>
+                    <g transform="scale(0.8) translate(-16,-14)"> 
+                        <polygon points="10,0 30,10 30,30 10,40 -10,30 -10,10" fill="#8CC84B"/>
+                        <text x="2" y="22" font-size="10" fill="white" font-weight="bold">JS</text>
+                    </g>
+                </g>
+                
+                <g class="smallCircleGroup" transform="translate(600, 400)">
+                    <circle class="smallCircle" r="35.81" fill="#090E16"/>
+                    <rect x="-10" y="-10" width="20" height="20" rx="4" fill="#3178C6"/>
+                    <text x="-5" y="5" font-size="12" fill="white" font-weight="bold">TS</text>
+                </g>
+            
+                <g class="smallCircleGroup" transform="translate(300, 573.2)">
+                    <circle class="smallCircle" r="35.81" fill="#090E16"/>
+                    <g transform="scale(0.5) translate(-20,-20)">
+                        <circle cx="10" cy="10" r="10" fill="#F24E1E"/>
+                        <circle cx="30" cy="10" r="10" fill="#FF7262"/>
+                        <circle cx="10" cy="30" r="10" fill="#A259FF"/>
+                        <circle cx="30" cy="30" r="10" fill="#1ABCFE"/>
+                        <circle cx="20" cy="20" r="10" fill="#0ACF83"/>
+                    </g>
+                </g>                        
         </svg>
+        
         
         <img src="/assets/home-character.svg" class="position-absolute top-50 start-50 translate-middle">
         
