"Added basic detail"

--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,8 +1,8 @@
 <nav class="navbar d-flex justify-content-between align-items-center">
-    <div class="d-flex align-items-center gap-2">
+    <a class="home-link" routerLink="home">
         <img class="logo" src="/assets/coding.png" />
         <span class="text-xx-large font-mono-space">FreelancerDevs</span>
-    </div>
+    </a>
     <div class="d-flex align-items-center">
         <ul class="d-none nav align-items-center gap-5 d-md-flex">
             <li routerLinkActive="active">
