--- a/src/styles/_nav.scss
+++ b/src/styles/_nav.scss
@@ -3,17 +3,27 @@
     background-color: #0f1120;
     border-radius: 16px;
 
+    .home-link {
+        display: flex;
+        align-items: center;
+        gap: 8px;
+        
+    }
+
     ul {
         li {
             padding: 8px 10px;
             border-radius: 4px;
 
-            &:hover {
-                background-color: #191934;
-            }
             a {
+                padding: 8px 10px;
+                border-radius: 4px;
                 text-decoration: none;
                 color: #f5f3f3f2;
+
+                &:hover {
+                    background-color: #191934;
+                }
             }
         }
     }
