--- a/src/styles/_misc.scss
+++ b/src/styles/_misc.scss
@@ -25,3 +25,18 @@
     height: 230px;
     margin-left: 11px;
 }
+
+.w-200 {
+    width: 220px;
+}
+
+.bg-secondary {
+    background-color: #14142a
+
+    !important;
+}
+
+.primary-border-y {
+    border-top: 1px solid #3d2f77;
+    border-bottom: 1px solid #3d2f77;
+}
