"Updated home page animation"

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="app-container">
-    <div class="mb-20 position-sticky top-20">
+    <div class="mb-20">
         <app-navigation></app-navigation>
     </div>
     <router-outlet></router-outlet>
