--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,9 +1,9 @@
-<nav class="navbar d-flex justify-content-between align-items-center">
-    <a class="home-link" routerLink="home">
-        <img class="logo" src="/assets/coding.png" />
-        <span class="text-xx-large font-mono-space">FreelancerDevs</span>
-    </a>
-    <div class="d-flex align-items-center">
+<div class="navigation">
+    <div class="navbar">
+        <a class="home-link" routerLink="home">
+            <img class="logo me-2" src="/assets/Logo.svg" />
+            <span class="text-xx-large font-mono-space">FreelancerDevs</span>
+        </a>
         <ul class="d-none nav align-items-center gap-5 d-md-flex">
             <li routerLinkActive="active">
                 <a routerLink="about">ABOUT</a>
@@ -19,4 +19,4 @@
             <i class="bi bi-list menu"></i>
         </div>
     </div>
-</nav>
+</div>
