--- a/src/styles/_card.scss
+++ b/src/styles/_card.scss
@@ -3,7 +3,8 @@
     border-radius: 6px;
     background-color: transparent;
     padding: 16px;
-
+    width: 100%;
+    
     &-subtitle {
         font-size: 14px;
         color: antiquewhite;
