--- a/src/styles/_button.scss
+++ b/src/styles/_button.scss
@@ -2,4 +2,9 @@
     border: 1px solid #3d2f77;
     border-radius: 6px;
     color: #3d2f77;
+
+    &:hover {
+        color: #5e47b9;
+        border: 1px solid #5e47b9;
+    }
 }
