--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,101 +1,113 @@
-<div class="home-content primary-border-b">
-    <div class="w-100">
-        <div class="greeting">
-            <span>👋</span>
-            <a href="" class="typewrite text-blue text-decoration-none" data-period="2000" data-type='[ "Hello!", "Hola!", "Konnichiwa!", "Bonjour!", "NEE-haow!" ]'>
-                <span class="wrap"></span>
-            </a>
+<div class="position-relative">
+    <div class="home-content primary-border-b">
+        <div class="left-content w-100">
+            <div class="greeting">
+                <span>👋</span>
+                <a href="" class="typewrite text-blue text-decoration-none" data-period="2000" data-type='[ "Hello!", "Hola!", "Konnichiwa!", "Bonjour!", "NEE-haow!" ]'>
+                    <span class="wrap"></span>
+                </a>
+            </div>
+            <div class="fs-4 fw-bold mt-3 mb-4">
+                <p>Your End-to-End Web Development</p>
+                <p>& Product Experts</p>
+            </div>
+            <p class="fs-6 text-yellow mb-4">Let's take your website to next level</p>
+            <button class="btn btn-outline">Hire Us</button>
+    
         </div>
-        <p class="fs-4 fw-bold mt-3 mb-4 w-75">Your End-to-End Web Development & Product Experts</p>
-        <p class="fs-6 text-yellow mb-4">Let's take your website to next level</p>
-        <button class="btn btn-outline">Hire Us</button>
-
-    </div>
-    <div>
-        <svg #animationCanvas width="500" height="500" viewBox="350 350 500 500" xmlns="http://www.w3.org/2000/svg">
-            <circle cx="600" cy="600" r="213" fill="#7B4AE2" fill-opacity="0.2" filter="url(#dropShadow)"/>
-        </svg>
-        
-        
-    </div>
-
-
-    <!-- <div class="position-relative">
-        <svg #circleContainer width="400" height="400" viewBox="250 200 300 400" xmlns="http://www.w3.org/2000/svg">
-            <circle cx="400" cy="400" r="150" fill="#7B4AE2" fill-opacity="0.2"/>
-            <g class="smallCircleGroup" transform="translate(320, 260)">
-                <circle class="smallCircle" r="25" fill="#090E16"/>
-                <g transform="scale(0.8) translate(-16,-16)">
-                    <polygon points="10,0 30,10 30,30 10,40 -10,30 -10,10" fill="#8CC84B"/>
-                    <text x="3" y="24" font-size="12" fill="white" font-weight="bold">JS</text>
+        <div>
+            <!-- <div class="animation-container">
+                <svg #animationCanvas width="100%" height="100%" viewBox="387 387 426 426" xmlns="http://www.w3.org/2000/svg">
+                  <circle cx="600" cy="600" r="213" fill="#7B4AE2" fill-opacity="0.2" />
+                </svg>
+            </div> -->
+            <div class="animation-container">
+                <div #animationCanvas style="position: relative; width: 100%; height: 450px;">
+                </div>
+            </div>
+                  
+        </div>
+    
+    
+        <!-- <div class="position-relative">
+            <svg #circleContainer width="400" height="400" viewBox="250 200 300 400" xmlns="http://www.w3.org/2000/svg">
+                <circle cx="400" cy="400" r="150" fill="#7B4AE2" fill-opacity="0.2"/>
+                <g class="smallCircleGroup" transform="translate(320, 260)">
+                    <circle class="smallCircle" r="25" fill="#090E16"/>
+                    <g transform="scale(0.8) translate(-16,-16)">
+                        <polygon points="10,0 30,10 30,30 10,40 -10,30 -10,10" fill="#8CC84B"/>
+                        <text x="3" y="24" font-size="12" fill="white" font-weight="bold">JS</text>
+                    </g>
                 </g>
-            </g>
-        
-            <g class="smallCircleGroup" transform="translate(550, 400)">
-                <circle class="smallCircle" r="25" fill="#090E16"/>
-                <g transform="scale(1.2)">
-                    <rect x="-10" y="-10" width="20" height="20" rx="4" fill="#3178C6"/>
-                    <text x="-5" y="5" font-size="14" fill="white" font-weight="bold">TS</text>
+            
+                <g class="smallCircleGroup" transform="translate(550, 400)">
+                    <circle class="smallCircle" r="25" fill="#090E16"/>
+                    <g transform="scale(1.2)">
+                        <rect x="-10" y="-10" width="20" height="20" rx="4" fill="#3178C6"/>
+                        <text x="-5" y="5" font-size="14" fill="white" font-weight="bold">TS</text>
+                    </g>
                 </g>
-            </g>
-        
-            <g class="smallCircleGroup" transform="translate(320, 540)">
-                <circle class="smallCircle" r="25" fill="#090E16"/>
-                <g transform="scale(0.6) translate(-20,-20)">
-                    <circle cx="10" cy="10" r="10" fill="#F24E1E"/>
-                    <circle cx="30" cy="10" r="10" fill="#FF7262"/>
-                    <circle cx="10" cy="30" r="10" fill="#A259FF"/>
-                    <circle cx="30" cy="30" r="10" fill="#1ABCFE"/>
-                    <circle cx="20" cy="20" r="10" fill="#0ACF83"/>
-                </g>
-            </g>                    
-        </svg>
-        
-        
-        <img src="/assets/home-character.svg" class="position-absolute top-50 start-50 translate-middle home-avatar">
-        
-    </div> -->
-</div>
-
-<div class="primary-border-b py-5 mt-5">
-    <div class="d-flex justify-content-center gap-4">
-        <div class="card d-flex flex-column align-items-center w-200">
-            <div class="card-icon">
-                <img src="/assets/program.svg">
+            
+                <g class="smallCircleGroup" transform="translate(320, 540)">
+                    <circle class="smallCircle" r="25" fill="#090E16"/>
+                    <g transform="scale(0.6) translate(-20,-20)">
+                        <circle cx="10" cy="10" r="10" fill="#F24E1E"/>
+                        <circle cx="30" cy="10" r="10" fill="#FF7262"/>
+                        <circle cx="10" cy="30" r="10" fill="#A259FF"/>
+                        <circle cx="30" cy="30" r="10" fill="#1ABCFE"/>
+                        <circle cx="20" cy="20" r="10" fill="#0ACF83"/>
+                    </g>
+                </g>                    
+            </svg>
+            
+            
+            <img src="/assets/home-character.svg" class="position-absolute top-50 start-50 translate-middle home-avatar">
+            
+        </div> -->
+    </div>
+    
+    <div class="primary-border-b py-5 mt-5">
+        <div class="d-flex justify-content-center gap-4">
+            <div class="card d-flex flex-column align-items-center w-200">
+                <div class="card-icon">
+                    <img src="/assets/program.svg">
+                </div>
+                <div class="card-subtitle mt-3 mb-2">
+                    team of 8
+                </div>
+                <div class="card-title">
+                    Programmers
+                </div>
             </div>
-            <div class="card-subtitle mt-3 mb-2">
-                team of 8
+            <div class="card d-flex flex-column align-items-center w-200">
+                <div class="card-icon">
+                    <img src="/assets/experience.svg">
+                </div>
+                <div class="card-subtitle mt-3 mb-2">
+                    5 + years
+                </div>
+                <div class="card-title">
+                    Experience
+                </div>
             </div>
-            <div class="card-title">
-                Programmers
-            </div>
-        </div>
-        <div class="card d-flex flex-column align-items-center w-200 bg-secondary">
-            <div class="card-icon">
-                <img src="/assets/experience.svg">
-            </div>
-            <div class="card-subtitle mt-3 mb-2">
-                5 + years
-            </div>
-            <div class="card-title">
-                Experience
-            </div>
-        </div>
-        <div class="card d-flex flex-column align-items-center w-200">
-            <div class="card-icon">
-                <img src="/assets/design.svg">
-            </div>
-            <div class="card-subtitle mt-3 mb-2">
-                10 + delivered
-            </div>
-            <div class="card-title">
-                Projects
+            <div class="card d-flex flex-column align-items-center w-200">
+                <div class="card-icon">
+                    <img src="/assets/design.svg">
+                </div>
+                <div class="card-subtitle mt-3 mb-2">
+                    10 + delivered
+                </div>
+                <div class="card-title">
+                    Projects
+                </div>
             </div>
         </div>
     </div>
+    
+    <div class="py-5 primary-border-b">
+        <app-profile></app-profile>
+    </div>
+    <div class="py-5 primary-border-b">
+        <app-projects></app-projects>
+    </div>
 </div>
-
-<div class="py-5 primary-border-b">
-    <app-profile></app-profile>
-</div>
-
