" home page revamp"

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,4 +1,4 @@
-<div class="profile-container">
+<!-- <div class="profile-container">
     <div class="profile-card" #profileCard>
         <div class="profile">
             <img src="/assets/home-character.svg" />
@@ -17,7 +17,7 @@
         </div>
     </div>
 
-    <div class="profile-card bg-secondary" #profileCard>
+    <div class="profile-card" #profileCard>
         <div class="profile">
             <img src="/assets/home-character.svg" />
         </div>
@@ -34,56 +34,8 @@
             <p>🚀 Constantly striving to improve my skills and deliver high-performance solutions every day.</p>
         </div>
     </div>
+</div> -->
 
-    <div class="profile-card" #profileCard>
-        <div class="profile">
-            <img src="/assets/home-character.svg" />
-        </div>
-        <div>
-            <div class="greeting">
-                <span>🧐</span>
-                <span class="text-blue">Product manager</span>
-            </div>
-            <p class="fs-3 fw-bold my-4">Shreshth Pathak</p>
-            <p>👋 My name is Syed Ali, but you can call me Syed. Nice to meet you!</p>
-            <p>👨‍💻 With over 2 years of experience developing and building scalable backend systems <br />using Node.js, TypeScript, and databases like PostgreSQL and MongoDB.</p>
-            <p>🎓 Graduated in [Your Degree] from [Your University].</p>
-            <p>💡 Passionate about backend development, API design, microservices architecture, and cloud computing.</p>
-            <p>🚀 Constantly striving to improve my skills and deliver high-performance solutions every day.</p>
-        </div>
-    </div>
-    <div class="profile-card" #profileCard>
-        <div class="profile">
-            <img src="/assets/home-character.svg" />
-        </div>
-        <div>
-            <div class="greeting">
-                <span>🧐</span>
-                <span class="text-blue">Quality Analyst Lead</span>
-            </div>
-            <p class="fs-3 fw-bold my-4">Pavan Khandelwal</p>
-            <p>👋 My name is Syed Ali, but you can call me Syed. Nice to meet you!</p>
-            <p>👨‍💻 With over 2 years of experience developing and building scalable backend systems <br />using Node.js, TypeScript, and databases like PostgreSQL and MongoDB.</p>
-            <p>🎓 Graduated in [Your Degree] from [Your University].</p>
-            <p>💡 Passionate about backend development, API design, microservices architecture, and cloud computing.</p>
-            <p>🚀 Constantly striving to improve my skills and deliver high-performance solutions every day.</p>
-        </div>
-    </div>
-    <div class="profile-card" #profileCard>
-        <div class="profile">
-            <img src="/assets/home-character.svg" />
-        </div>
-        <div>
-            <div class="greeting">
-                <span>🧐</span>
-                <span class="text-blue">Designer Lead</span>
-            </div>
-            <p class="fs-3 fw-bold my-4">Utkarsh</p>
-            <p>👋 My name is Syed Ali, but you can call me Syed. Nice to meet you!</p>
-            <p>👨‍💻 With over 2 years of experience developing and building scalable backend systems <br />using Node.js, TypeScript, and databases like PostgreSQL and MongoDB.</p>
-            <p>🎓 Graduated in [Your Degree] from [Your University].</p>
-            <p>💡 Passionate about backend development, API design, microservices architecture, and cloud computing.</p>
-            <p>🚀 Constantly striving to improve my skills and deliver high-performance solutions every day.</p>
-        </div>
-    </div>
+<div class="profile-container">
+    fevgrfvgrfvbgfrt
 </div>
