--- a/src/styles/_misc.scss
+++ b/src/styles/_misc.scss
@@ -35,6 +35,10 @@
     !important;
 }
 
+.primary-border {
+    border: 1px solid #3d2f77;
+}
+
 .primary-border-b {
     border-bottom: 1px solid #3d2f77;
 }
@@ -62,6 +66,11 @@
     padding: 20px;
     border-radius: 16px;
     background-color: #090E16;
+    border: 1px solid #3d2f77;
+
+    &:not(:last-child) {
+        margin-bottom: 20px;
+    }
 
     &.bg-secondary {
         .greeting {
@@ -92,43 +101,16 @@
     }
 }
 
+.home-heading {
+    font-size: 32px;
+    font-weight: bold;
+    margin-top: 28px;
+    margin-bottom: 32px;
+    line-height: 28px;
+}
 
-// slider
-.slider-container {
-    display: flex;
-    align-items: center;
-    position: relative;
-    width: 300px;
-    overflow: hidden;
-        
-    .slider-wrapper {
-      width: 100%;
-      overflow: hidden;
-    }
-    .slider {
-      display: flex;
-      transition: transform 0.5s ease-in-out;
-    }
-    .card {
-      min-width: 100%;
-      padding: 20px;
-      background: #3498db;
-      color: white;
-      text-align: center;
-      font-size: 20px;
-      border-radius: 10px;
-    }
-    .arrow {
-      position: absolute;
-      top: 50%;
-      transform: translateY(-50%);
-      background: rgba(0, 0, 0, 0.5);
-      color: white;
-      border: none;
-      padding: 10px;
-      cursor: pointer;
-      z-index: 10;
-    }
-    .left { left: 0; }
-    .right { right: 0; }
-  }
+.home-section {
+    border-bottom: 1px solid #3d2f77;
+    padding: 80px 0;
+}
+
