--- a/src/styles/_nav.scss
+++ b/src/styles/_nav.scss
@@ -6,7 +6,7 @@
     top: 0;
     width: 100%;
     max-width: 100%;
-    padding: 12px;
+    padding: 12px 12px 0 12px;
     background-color: #090E16;
 }
 
