--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -33,3 +33,22 @@ body {
 .text-primary {
     color: #ffffff;
 }
+
+.bubble-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 0;
+    overflow: hidden;
+
+    .bubble {
+        position: absolute;
+        background: #201a3f; // Light Blue
+        border-radius: 50%;
+        filter: blur(10px);
+        opacity: 0.7;
+    }
+}
+
