--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,55 +1,56 @@
-<div class="primary-border-b primary-border-t py-5 mt-5">
-    <div class="d-flex justify-content-center gap-4">
-        <div class="card w-200">
-            <div class="d-flex align-items-center gap-3">
-                <img src="/assets/program.svg">
-                <div>
-                    <p class="card-title">Disteven</p>
-                    <p class="card-subtitle">The better way to split money</p>
+<div>
+    <div class="d-flex justify-content-center gap-4 flex-wrap">
+        <div class="grid-masonry mb-5 p-4">
+            <div class="masonry-item mb-5">
+                <div class="masonry-item-inner">
+                    <div class="card">
+                        <div class="d-flex align-items-center gap-3">
+                            <img src="/assets/program.svg">
+                            <div>
+                                <p class="card-title">Disteven</p>
+                                <p class="card-subtitle">The better way to split money</p>
+                            </div>
+                        </div>
+                        <div class="card-subtitle mt-3 mb-2 text-large">
+                            Distribute money evenly,
+                            Manage your expenses. Track pending funds. Create groups.
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="card-subtitle mt-3 mb-2 text-large">
-                Distribute money evenly,
-                Manage your expenses. Track pending funds. Create groups.
-            </div>
-        </div>
-        <div class="card w-200">
-            <div class="d-flex align-items-center gap-3">
-                <img src="/assets/program.svg">
-                <div>
-                    <p class="card-title">Disteven</p>
-                    <p class="card-subtitle">The better way to split money</p>
+            <div class="masonry-item mb-5">
+                <div class="masonry-item-inner">
+                    <div class="card">
+                        <div class="d-flex align-items-center gap-3">
+                            <img src="/assets/program.svg">
+                            <div>
+                                <p class="card-title">Disteven</p>
+                                <p class="card-subtitle">The better way to split money</p>
+                            </div>
+                        </div>
+                        <div class="card-subtitle mt-3 mb-2 text-large">
+                            Distribute money evenly,
+                            Manage your expenses. Track pending funds. Create groups.
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="card-subtitle mt-3 mb-2 text-large">
-                Distribute money evenly,
-                Manage your expenses. Track pending funds. Create groups.
-            </div>
-        </div>
-        <div class="card w-200">
-            <div class="d-flex align-items-center gap-3">
-                <img src="/assets/program.svg">
-                <div>
-                    <p class="card-title">Disteven</p>
-                    <p class="card-subtitle">The better way to split money</p>
+            <div class="masonry-item mb-5">
+                <div class="masonry-item-inner">
+                    <div class="card">
+                        <div class="d-flex align-items-center gap-3">
+                            <img src="/assets/program.svg">
+                            <div>
+                                <p class="card-title">Disteven</p>
+                                <p class="card-subtitle">The better way to split money</p>
+                            </div>
+                        </div>
+                        <div class="card-subtitle mt-3 mb-2 text-large">
+                            Distribute money evenly,
+                            Manage your expenses. Track pending funds. Create groups.
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <div class="card-subtitle mt-3 mb-2 text-large">
-                Distribute money evenly,
-                Manage your expenses. Track pending funds. Create groups.
-            </div>
-        </div>
-        <div class="card w-200">
-            <div class="d-flex align-items-center gap-3">
-                <img src="/assets/program.svg">
-                <div>
-                    <p class="card-title">Disteven</p>
-                    <p class="card-subtitle">The better way to split money</p>
-                </div>
-            </div>
-            <div class="card-subtitle mt-3 mb-2 text-large">
-                Distribute money evenly,
-                Manage your expenses. Track pending funds. Create groups.
             </div>
         </div>
     </div>
