--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="position-relative">
     <div class="home-content primary-border-b position-relative overflow-hidden">
-        <div class="bubble-container"></div> <!-- Bubble Background -->
+        <div class="bubble-container"></div>
         <div class="left-content w-100 position-relative">
             <div class="greeting">
                 <span>👋</span>
@@ -21,38 +21,50 @@
     </div>
     
     <div class="home-section" #homeSection>
-        <div class="d-flex justify-content-center gap-4">
-            <div class="card d-flex flex-column align-items-center w-200">
-                <div class="card-icon">
-                    <img src="/assets/program.svg">
-                </div>
-                <div class="card-subtitle mt-3 mb-2">
-                    team of 8
-                </div>
-                <div class="card-title">
-                    Programmers
-                </div>
-            </div>
-            <div class="card d-flex flex-column align-items-center w-200">
-                <div class="card-icon">
-                    <img src="/assets/experience.svg">
-                </div>
-                <div class="card-subtitle mt-3 mb-2">
-                    5 + years
-                </div>
-                <div class="card-title">
-                    Experience
+        <div class="grid-masonry">
+            <div class="masonry-item">
+                <div class="masonry-item-inner">
+                    <div class="card d-flex flex-column align-items-center w-200">
+                        <div class="card-icon">
+                            <img src="/assets/program.svg">
+                        </div>
+                        <div class="card-subtitle mt-3 mb-2">
+                            team of 8
+                        </div>
+                        <div class="card-title">
+                            Programmers
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="card d-flex flex-column align-items-center w-200">
-                <div class="card-icon">
-                    <img src="/assets/design.svg">
+            <div class="masonry-item">
+                <div class="masonry-item-inner">
+                    <div class="card d-flex flex-column align-items-center w-200">
+                        <div class="card-icon">
+                            <img src="/assets/experience.svg">
+                        </div>
+                        <div class="card-subtitle mt-3 mb-2">
+                            5 + years
+                        </div>
+                        <div class="card-title">
+                            Experience
+                        </div>
+                    </div>
                 </div>
-                <div class="card-subtitle mt-3 mb-2">
-                    10 + delivered
-                </div>
-                <div class="card-title">
-                    Projects
+            </div>
+            <div class="masonry-item">
+                <div class="masonry-item-inner">
+                    <div class="card d-flex flex-column align-items-center w-200">
+                        <div class="card-icon">
+                            <img src="/assets/design.svg">
+                        </div>
+                        <div class="card-subtitle mt-3 mb-2">
+                            10 + delivered
+                        </div>
+                        <div class="card-title">
+                            Projects
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
