--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -7,3 +7,21 @@
 .page-container {
     padding: 20px;
 }
+
+.bubble-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 0;
+    overflow: hidden;
+
+    .bubble {
+        position: absolute;
+        background: #201a3f; // Light Blue
+        border-radius: 50%;
+        filter: blur(10px);
+        opacity: 0.7;
+    }
+}
