--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -12,10 +12,12 @@
 @import 'misc';
 @import 'queries';
 @import 'card';
+@import 'icon';
 
 * {
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
 }
 
 body {
@@ -33,22 +35,3 @@ body {
 .text-primary {
     color: #ffffff;
 }
-
-.bubble-container {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 0;
-    overflow: hidden;
-
-    .bubble {
-        position: absolute;
-        background: #201a3f; // Light Blue
-        border-radius: 50%;
-        filter: blur(10px);
-        opacity: 0.7;
-    }
-}
-
