--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,8 +10,8 @@
                 </a>
             </div>
             <div class="home-heading">
-                <p>Your End-to-End Web Development</p>
-                <p>& Product Experts</p>
+                <p>Your End-to-End Web Development
+                & Product Experts</p>
             </div>
             <div class="home-hire">
                 <p class="fs-6 text-yellow mb-4">Let's take your website to next level</p>
