--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -41,10 +41,22 @@
     <p class="fs-3 fw-bold">A team of digital craftspeople</p>
     <p class="text-secondary">We're a diverse team of designers, developers, and strategists who are passionate about<br /> creating exceptional digital experiences that solve real problems.</p>
     <div class="approach-container">
-        <div class="circle-container">
-            <svg #circleContainer width="400" height="400" viewBox="250 200 300 400" xmlns="http://www.w3.org/2000/svg">
-                <circle cx="400" cy="400" r="150" fill="#7B4AE2" fill-opacity="0.2"/>
-            </svg>
+        <div class="collage-container">
+            <div class="collage-item collage-item-1">
+                <img src="/assets/images/image1.webp" alt="Collage Image 1">
+            </div>
+            <div class="collage-item collage-item-2">
+                <img src="/assets/images/image2.webp" alt="Collage Image 2">
+            </div>
+            <div class="collage-item collage-item-3">
+                <img src="/assets/images/image3.jpg" alt="Collage Image 3">
+            </div>
+            <div class="collage-item collage-item-4">
+                <img src="/assets/images/image4.webp" alt="Collage Image 4">
+            </div>
+            <div class="collage-item collage-item-5">
+                <img src="/assets/images/image5.webp" alt="Collage Image 5">
+            </div>
         </div>
         <div class="approach-content">
             <p class="fs-4 fw-bold">Our approach</p>
