--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -37,8 +37,8 @@
 </div> -->
 
 <div class="profile-container">
-    <div class="greeting">WHO WE ARE</div>
-    <p class="fs-3 fw-bold">A team of digital craftspeople</p>
+    <div class="greeting text-blue">WHO WE ARE</div>
+    <p class="fs-3 fw-bold my-3">A team of digital craftspeople</p>
     <p class="text-secondary">We're a diverse team of designers, developers, and strategists who are passionate about<br /> creating exceptional digital experiences that solve real problems.</p>
     <div class="approach-container">
         <div class="collage-container">
@@ -60,7 +60,7 @@
         </div>
         <div class="approach-content">
             <p class="fs-4 fw-bold">Our approach</p>
-            <p class="text-secondary">
+            <p class="text-secondary my-3">
                 We believe in creating lasting digital products that are both beautiful and functional. 
                 Our collaborative process ensures that we understand your vision and bring it to life with precision and creativity.
             </p>
