--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -28,10 +28,19 @@ body {
     background-color: #090E16;
 }
 
+p, h1, h2, h3, h4, h5, h6 {
+    padding: 0;
+    margin: 0;
+}
+
 .bg-green {
     background-color: #304f2f;
 }
 
 .text-primary {
     color: #ffffff;
+}
+
+html {
+    scroll-behavior: smooth;
 }
